syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "TicketApi.WebHost.GrpcEndpoints";

message UpdateDisplayTextGrpcDto {
	int32 TicketId = 1;
	int32 LanguageCode = 2;
	string DisplayText = 3;
}

service TicketGrpc {
	rpc UpdateDisplayText (UpdateDisplayTextGrpcDto) returns (google.protobuf.Empty);
}
